# eth_event_stream

./: .env.sh.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
eth_event_macro/: Cargo.toml
eth_event_macro/examples/: erc20_transfer.rs
eth_event_macro/src/: events.rs  lib.rs
eth_event_stream/: Cargo.toml  README.md  expanded.rs
eth_event_stream/examples/: block_notify.rs  stream_live.rs  stream_multi.rs
eth_event_stream/src/: events.rs  lib.rs  rich_log.rs  sink.rs  stream.rs
eth_event_stream/src/data_feed/: block.rs  mod.rs
examples/: block_notify.rs  stream_live.rs  stream_multi.rs
hooks/: pre-commit
src/: aggregate.rs  events.rs  lib.rs  log_sink.rs  rich_log.rs  sink.rs  stream.rs  sync.rs
src/data_feed/: block.rs  mod.rs  pubsub.rs
