[package]
name = "eth_event_macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Macro deriving utility functions based on solidity event declaration."

[dependencies]
syn = "1.0.98"
quote = "1.0"
ethabi = "16.0.0"
web3 = "0.18.0"
anyhow = "1.0"
ethereum-types = "0.12.1"
nom = "7.1.1"

[lib]
proc-macro = true
